[fix] pre wrap tweets

--- a/src/views/home/card/Card.module.scss
+++ b/src/views/home/card/Card.module.scss
@@ -16,6 +16,10 @@
   }
 }
 
+.card__text {
+  white-space: pre-wrap;
+}
+
 @media (max-width: $tablet-breakpoint) {
   .card {
     font-size: 0.75rem;
